# MDSimulationAgent

./: .gitignore  README.md  pyproject.toml
.claude-context/: README.md
.claude-context/transcripts/: 3d4c000f-9005-4eb3-8072-a817ae407a1d.jsonl
.claude/skills/: .mdagent-install.json
critiques/CHATGPT_HANDOFF_01_md-agent-architecture/: .codex_session_id  FALLBACK_PROMPT.md  FINAL_REVISION.md  R1_from_gpt.md  R1_to_gpt.md  R2_from_gpt.md  R2_to_gpt.md  R3_from_gpt.md  R3_to_gpt.md  R4_from_gpt.md  R4_to_gpt.md  R5_from_gpt.md  R5_to_gpt.md  STATUS.md
critiques/CHATGPT_HANDOFF_02_transferable-skills/: .codex_session_id  FINAL_REVISION.md  R1_from_gpt.md  R1_to_gpt.md  R2_from_gpt.md  R2_to_gpt.md  R3_from_gpt.md  R3_to_gpt.md  R4_from_gpt.md  R4_to_gpt.md  STATUS.md
critiques/CHATGPT_HANDOFF_03_starter-kit/: .codex_session_id  FINAL_REVISION.md  R1_from_gpt.md  R1_to_gpt.md  R2_from_gpt.md  R2_to_gpt.md  R3_from_gpt.md  R3_to_gpt.md  STATUS.md
critiques/CHATGPT_HANDOFF_04_tutorial-bundle/: .codex_session_id  R1_from_gpt.md  R1_to_gpt.md  R2_from_gpt.md  R2_to_gpt.md  STATUS.md
critiques/CHATGPT_HANDOFF_05_packed-bundle/: .codex_session_id  R1_from_gpt.md  R1_to_gpt.md  R2_from_gpt.md  STATUS.md  (+5 more)
docs/: build_usage_pdfs.py
schemas/: README.md
skills/: README.md
tests/: conftest.py  test_analysis.py  test_cli.py  test_dialogue.py  test_doctor.py  test_dynamics.py  test_fingerprint.py  test_general_mode_protonation.py  test_golden_path.py  test_hashing.py  test_mmcif_ingest.py  test_pack_bundle.py  test_pdb2gmx_integration.py  test_pdb2gmx_recognizer.py  test_propka.py  test_propka_integration.py  test_resume.py  test_run_config.py  test_run_index.py  test_schemas.py  test_starter_kit.py  test_step_report.py  test_tutorials.py  test_visualization.py  test_wheel_install.py
tutorial/: MD_simulation_with_agents.ipynb  build_tutorial.py
(+78 files in other folders)
